# EditorVideos

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cpu  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: MANUAL_IMPLEMENTACION.md  MANUAL_TECNICO.md  MANUAL_USUARIO.md  TECHNICAL_DESIGN.md  TEST_CASES.md
infra/: download_models.py  entrypoint.sh  qdrant_init.py  test_pipeline_e2e.py  validate_whisper.py
src/autoedit/: __init__.py  settings.py
src/autoedit/analysis/: audio.py  chat.py  scenes.py  transcribe.py  transcribe_local.py  transcribe_remote.py  transcript_signals.py  vision.py
src/autoedit/assets/: deduplication.py  embeddings.py  retrieval.py
src/autoedit/assets/ingest/: __init__.py  freesound.py  pixabay.py  twitch_emotes.py
src/autoedit/cli/: main.py
src/autoedit/cli/commands/: assets.py  db.py  doctor.py  job.py  ping.py  render.py  voice.py  worker.py
src/autoedit/dashboard/: app.py
src/autoedit/domain/: __init__.py  asset.py  clip.py  edit_decision.py  highlight.py  ids.py  job.py  signals.py
src/autoedit/gui/: __init__.py  app.py  data.py
src/autoedit/gui/pages/: clips.py  jobs.py  timeline.py
src/autoedit/gui/static/: timeline.js
src/autoedit/ingest/: twitch_chat.py  twitch_vod.py
src/autoedit/llm/: openrouter.py  pricing.py  retry.py
src/autoedit/pipeline/: orchestrator.py  state.py
src/autoedit/pipeline/nodes/: e0_ingest.py  e1_extract.py  e2_transcribe.py  e3_analyze.py  e4_score.py  e5_triage.py  e6_retrieve.py  e7_direct.py  e8_tts.py
src/autoedit/render/: compositor.py  ffmpeg_runner.py  reframe.py  subtitles.py
src/autoedit/scoring/: dedup.py  fusion.py  windowing.py
src/autoedit/storage/: db.py
src/autoedit/storage/repositories/: assets.py  edit_decisions.py  highlights.py  jobs.py  vods.py  voices.py  windows.py
src/autoedit/tts/: __init__.py  f5_engine.py  narration_cache.py
src/autoedit/utils/: cuda_dlls.py
src/autoedit/workers/: tasks.py  worker.py
tests/: conftest.py
tests/integration/: test_db_migrations.py  test_pipeline_stages.py
tests/unit/: test_storage.py
tests/unit/analysis/: test_transcribe.py
tests/unit/assets/: test_retrieval.py
tests/unit/domain/: test_edit_decision.py  test_ids.py  test_job.py  test_job_config.py
tests/unit/llm/: test_pricing.py  test_retry.py
tests/unit/pipeline/: test_e5_triage.py
tests/unit/render/: test_ffmpeg_commands.py
tests/unit/scoring/: test_fusion.py
tests/unit/tts/: test_narration_cache.py
