[project]
name = "autoedit-ai"
version = "0.1.0"
description = "AutoEdit AI — Twitch VOD to edited clips (YouTube, Shorts, TikTok, Reels)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlmodel>=0.0.21",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "openai>=1.0",
    "pydantic-ai>=0.0.20",
    "loguru>=0.7",
    "langfuse>=2.0",
    "python-ulid>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "qdrant-client>=1.11",
    "arq>=0.26",
    "yt-dlp>=2024.0",
    "chat-downloader>=0.2",
    "pyarrow>=16.0",
    "faster-whisper>=1.0",
    "scenedetect>=0.6",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pyloudnorm>=0.1",
    "pandas>=2.0",
    "open-clip-torch>=3.3.0",
    "pillow>=10.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "f5-tts>=1.1.20",
    "mediapipe>=0.10.35",
    "gradio>=6.10.0",
    "nicegui>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
autoedit = "autoedit.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoedit"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "^tests/unit/assets/",
    "^tests/unit/llm/test_pricing\\.py$",
    "^tests/unit/llm/test_retry\\.py$",
    "^tests/unit/scoring/test_fusion\\.py$",
    "^tests/unit/tts/test_narration_cache\\.py$",
    "^tests/integration/test_db_migrations\\.py$",
    "^tests/integration/test_pipeline_stages\\.py$",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--cov=src/autoedit",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=20",   # bajo inicialmente; subirá por sprint
]
markers = [
    "unit: fast isolated tests (no I/O, no GPU)",
    "integration: tests that use SQLite, Redis, or Qdrant",
    "e2e: full pipeline tests with mocked LLM",
    "slow: tests that take > 10s",
    "gpu: tests that require a CUDA GPU",
]

# ---------------------------------------------------------------------------
# PyTorch CUDA source — RTX 4070 Mobile / CUDA 12.x
# uv resolves torch/torchvision/torchaudio from this index instead of PyPI.
# ---------------------------------------------------------------------------

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[tool.coverage.run]
source = ["src/autoedit"]
branch = true
omit = [
    "*/__init__.py",
    "*/cli/*",
    "*/dashboard/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "if __name__ == .__main__.:",
]
